--- a/src/app/condicional/condicional.component.html
+++ b/src/app/condicional/condicional.component.html
@@ -24,7 +24,8 @@
     <button class="btn btn-primary" (click)="calcularProbabilidadeCondicional()">Calcular Probabilidade Condicional</button>
   
     <p class="mt-3" *ngIf="probabilidadeCondicional !== null">Probabilidade Condicional: {{ probabilidadeCondicional | number:'1.2-2' }}</p>
-  
+    <p *ngIf="probabilidadeCondicional !== null"> Porcentagem: {{ probabilidadeCondicional.toFixed(2) }}%</p>
+
     <h2 class="mt-5">Consultas Anteriores</h2>
     <ul class="list-group">
       <li *ngFor="let consulta of consultasAnteriores" class="list-group-item d-flex justify-content-between align-items-center">
